hphp/test/zend/good/ext/zip/tests/oo_getstatusstring.php.skipif
<?php
<<__EntryPoint>> function main() {
if (!extension_loaded("zip")) { echo "skip extension not available"; }
}
