hphp/test/zend/bad/ext/pgsql/tests/bug46408.php.skipif
<?php
require_once('skipif.inc');
if (false === setlocale(LC_ALL, 'hr_HR.utf-8', 'hr_HR')) {
    echo "skip Locale hr_HR.utf-8 not present";
}
?>